@@ -11,13 +11,22 @@ source(system.file("test-tools.R", package= "expm"))## -> assertError()...
 ## ----------------------------
 ## Test case 1 from Ward (1977)
 ## ----------------------------
-test1 <- rbind(c(4, 2, 0),
-               c(1, 4, 1),
-               c(1, 1, 4))
-(m1 <- expm(test1, method="Pade"))
-(m1O <- expm(test1, method="PadeO"))# very slightly different
-(m1T  <- expm(test1,method="Taylor"))
-(m1TO <- expm(test1,method="TaylorO"))
+T1 <- rbind(c(4, 2, 0),
+            c(1, 4, 1),
+            c(1, 1, 4))
+(m1   <- expm(T1, method="Pade"))
+(m1O  <- expm(T1, method="PadeO"))# very slightly different
+(m1T  <- expm(T1, method="Taylor"))
+(m1TO <- expm(T1, method="TaylorO"))
+## True Eigenvalue Decomposition of T1
+s2 <- sqrt(2)
+eV1 <- matrix(c(s2,s2,s2,  -2,1,1,  2,-1,-1) / sqrt(6),
+              3,3)
+L1 <- diag(lm1 <- c(6, 3, 3))
+stopifnot(
+    all.equal(eV1 %*% L1, T1 %*% eV1, tol=1e-15)
+    )
+## However,  eV1 is not orthogonal, but of rank 2
 
 ## "true" result
 m1.t <- matrix(c(147.866622446369, 127.781085523181, 127.781085523182,
@@ -27,37 +36,40 @@ stopifnot(all.equal(m1.t, m1,  check.attrib=FALSE, tol = 1e-13),
           all.equal(m1.t, m1O, check.attrib=FALSE, tol = 1e-13),
           all.equal(m1.t,m1T,  check.attrib=FALSE, tol = 1e-13),
           all.equal(m1.t,m1TO, check.attrib=FALSE, tol = 1e-13),
-          all.equal(m1.t, expm(test1,"Ward77"),    tol = 1e-13),
-          all.equal(m1.t, expm(test1,"R_Pade"),    tol = 1e-13),
-          all.equal(m1.t, expm(test1,"R_Ward77"),  tol = 1e-13))
+          all.equal(m1.t, expm(T1,"Ward77"),    tol = 1e-13),
+          all.equal(m1.t, expm(T1,"R_Pade"),    tol = 1e-13),
+          all.equal(m1.t, expm(T1,"R_Ward77"),  tol = 1e-13))
 ## -- these agree with ward (1977, p608)
 ##
-m1.2 <- try( expm(test1, "R_Eigen") ) ## 32-bit: gives an error from solve; 64-bit "ok"
+m1.2 <- try( expm(T1, "R_Eigen") ) ## 32-bit: gives an error from solve; 64-bit "ok"
 if(!inherits(m1.2, "try-error")) {
+    if(FALSE)## with libatlas R_Eigen is "sehr eigen"
     stopifnot(all.equal(m1.t, m1.2, check.attrib=FALSE))
     ## but it's less accurate:
     print(all.equal(m1.t, m1.2, check.attrib=FALSE, tol= 1e-12))
     ##-> rel.diff = 6.44e-10 / 6.2023e-10
+    ##__ BUT  0.1228099
+    ##__ with libatlas (ubuntu 12.04 libatlas-base-dev Version: 3.8.4-3build1)
 }
 
 ##
 ## ----------------------------
 ## Test case 2 from Ward (1977)
 ## ----------------------------
-test2 <- t(matrix(c(
+T2 <- t(matrix(c(
                     29.87942128909879, .7815750847907159, -2.289519314033932,
                     .7815750847907159, 25.72656945571064,  8.680737820540137,
                     -2.289519314033932, 8.680737820540137,  34.39400925519054),
                   3, 3))
-(m2 <- expm(test2, method="Pade"))
+(m2 <- expm(T2, method="Pade"))
 ##                   [,1]               [,2]               [,3]
 ##[1,]   5496313853692357 -18231880972009844 -30475770808580828
 ##[2,] -18231880972009852  60605228702227024 101291842930256144
 ##[3,] -30475770808580840 101291842930256144 169294411240859072
 ## -- which agrees with Ward (1977) to 13 significant figures
-(m2O  <- expm(test2, method="PadeO"))
-(m2T  <- expm(test2,method="Taylor"))
-(m2TO <- expm(test2,method="TaylorO"))
+(m2O  <- expm(T2, method="PadeO"))
+(m2T  <- expm(T2,method="Taylor"))
+(m2TO <- expm(T2,method="TaylorO"))
 
 m2.t <- matrix(c(5496313853692216, -18231880972008932, -30475770808579672,
                  -18231880972008928, 60605228702222480, 101291842930249776,
@@ -69,48 +81,50 @@ stopifnot(all.equal(m2.t, m2, check.attrib=FALSE, tol = 1e-12),
           all.equal(m2.t, m2O,check.attrib=FALSE, tol = 1e-12),
           all.equal(m2.t,m2T, check.attrib=FALSE, tol = 1e-12),
           all.equal(m2.t,m2TO,check.attrib=FALSE, tol = 1e-12),
-          all.equal(m2.t, expm(test2,"Ward77"),   tol = 1e-12),
-          all.equal(m2.t, expm(test2,"R_Ward77"), tol = 1e-12),
-          all.equal(m2.t, expm(test2,"R_Pade"),   tol = 1e-12),
+          all.equal(m2.t, expm(T2,"Ward77"),   tol = 1e-12),
+          all.equal(m2.t, expm(T2,"R_Ward77"), tol = 1e-12),
+          all.equal(m2.t, expm(T2,"R_Pade"),   tol = 1e-12),
           TRUE)
 
 ## ----------------------------
 ## Test case 3 from Ward (1977)
 ## ----------------------------
-test3 <- t(matrix(c(
+T3 <- t(matrix(c(
     -131, 19, 18,
     -390, 56, 54,
     -387, 57, 52), 3, 3))
-(m3 <- expm(test3, method="Pade"))
+(m3 <- expm(T3, method="Pade"))
 ##                    [,1]                [,2]                [,3]
 ##[1,] -1.5096441587713636 0.36787943910439874 0.13533528117301735
 ##[2,] -5.6325707997970271 1.47151775847745725 0.40600584351567010
 ##[3,] -4.9349383260294299 1.10363831731417195 0.54134112675653534
 ## -- agrees to 10dp with Ward (1977), p608.
-(m3O  <- expm(test3, method="PadeO"))
-(m3T  <- expm(test3,method="Taylor"))
-(m3TO <- expm(test3,method="TaylorO"))
+(m3O  <- expm(T3, method="PadeO"))
+(m3T  <- expm(T3,method="Taylor"))
+(m3TO <- expm(T3,method="TaylorO"))
 
 m3.t <- matrix(c(-1.50964415879218, -5.6325707998812, -4.934938326092,
                  0.367879439109187, 1.47151775849686, 1.10363831732856,
                  0.135335281175235, 0.406005843524598, 0.541341126763207),
                3,3)
 
-stopifnot(all.equal(m3.t, m3,           check.attrib=FALSE, tol = 1e-11),
+stopifnot(all.equal(m3.t, m3,           check.attrib=FALSE, tol = 3e-11),
+					#			  ^^^^^
+					# 1.2455e-11 for libatlas (above)
           all.equal(m3.t, m3T,          check.attrib=FALSE, tol = 1e-11),
           all.equal(m3.t, m3O,          check.attrib=FALSE, tol = 1e-11),
           all.equal(m3.t, m3TO,         check.attrib=FALSE, tol = 1e-11),
-          all.equal(m3.t, expm(test3,"R_Eigen"), tol = 1e-11),
-          all.equal(m3.t, expm(test3,"Ward77"), tol = 1e-11),
-          all.equal(m3.t, expm(test3,"R_Ward"), tol = 1e-11),
-          all.equal(m3.t, expm(test3,"R_Pade"), tol = 1e-11),
+          all.equal(m3.t, expm(T3,"R_Eigen"), tol = 1e-11),
+          all.equal(m3.t, expm(T3,"Ward77"), tol = 1e-11),
+          all.equal(m3.t, expm(T3,"R_Ward"), tol = 1e-11),
+          all.equal(m3.t, expm(T3,"R_Pade"), tol = 1e-11),
           TRUE)
 ## -- in this case, a similar level of agreement with Ward (1977).
 
 ## ----------------------------
 ## Test case 4 from Ward (1977)
 ## ----------------------------
-test4 <-
+T4 <-
     array(c(0, 0, 0, 0, 0, 0, 0, 0, 0, 1e-10,
             1, 0, 0, 0, 0, 0, 0, 0, 0, 0,
             0, 1, 0, 0, 0, 0, 0, 0, 0, 0,
@@ -122,10 +136,10 @@ test4 <-
             0, 0, 0, 0, 0, 0, 0, 1, 0, 0,
             0, 0, 0, 0, 0, 0, 0, 0, 1, 0),
           dim = c(10, 10))
-(m4   <- expm(test4, method="Pade"))
-(m4O  <- expm(test4, method="PadeO"))
-(m4T  <- expm(test4,method="Taylor"))
-(m4TO <- expm(test4,method="TaylorO"))
+(m4   <- expm(T4, method="Pade"))
+(m4O  <- expm(T4, method="PadeO"))
+(m4T  <- expm(T4,method="Taylor"))
+(m4TO <- expm(T4,method="TaylorO"))
 
 stopifnot(all.equal(m4  [,10], 1/gamma(10:1), tol=1e-14),
           all.equal(m4O [,10], 1/gamma(10:1), tol=1e-14),
@@ -134,9 +148,30 @@ stopifnot(all.equal(m4  [,10], 1/gamma(10:1), tol=1e-14),
 	  all.equal(m4, m4O, check.attrib=FALSE, tol=5e-15),
 	  all.equal(m4, m4T, check.attrib=FALSE, tol=5e-15),
 	  all.equal(m4, m4TO,check.attrib=FALSE, tol=5e-15),
-          all.equal(m4, expm(test4,"Ward77"), check.attrib=FALSE, tol = 1e-14),
-          all.equal(m4, expm(test4,"R_Ward"), check.attrib=FALSE, tol = 1e-14),
-          all.equal(m4, expm(test4,"R_Pade"), check.attrib=FALSE, tol = 1e-14),
-          max(abs(m4 - expm(test4,"R_Eigen"))) < 1e-7)
+          all.equal(m4, expm(T4,"Ward77"), check.attrib=FALSE, tol = 1e-14),
+          all.equal(m4, expm(T4,"R_Ward"), check.attrib=FALSE, tol = 1e-14),
+          all.equal(m4, expm(T4,"R_Pade"), check.attrib=FALSE, tol = 1e-14),
+          max(abs(m4 - expm(T4,"R_Eigen"))) < 1e-7)
 ## here expm(., EV ) is accurate only to 7 d.p., whereas
 ##      expm(.,Pade) is correct to at least 14 d.p.
+
+### Test case with diagonalizable matrix with multiple Eigen values:
+A4 <- rbind(c(-1, 3, -1),
+            c(-3, 5, -1),
+            c(-3, 3,  1))
+Ea4 <- eigen(A4)
+stopifnot(all.equal(Ea4$values, (lam4 <- c(2,2,1))))
+## However, the eigen values don't show the nice property:
+V4 <- Ea4$vectors
+crossprod(V4)
+## i.e., they are *not* orthogonal
+## but still diagonalize:
+stopifnot(all.equal(A4,
+                    V4 %*% diag(x=lam4) %*% solve(V4)))
+## whereas this diagonalizes *and* looks nice
+W4 <- rbind(c(1, 1, -1),
+	    c(1, 1,  0),
+	    c(1, 0,  3))
+(sW4 <- solve(W4))
+stopifnot(all.equal(diag(x = c(1,2,2)),
+		    solve(W4) %*% A4 %*% W4 ))
